# classication

./: .gitignore  README.md  setup.cfg  setup.py
cl/: best_simple_perception.py  create_image.py  dansoroku.py  data.pickle  hall.py  hall_sim.py  hall_simulate.py  im.py  log.py  logistic.py  lr_model.py  main.py  mnist_.py  mnistlike.py  models.py  mymnist.py  qiita.py  scan.py  seaborn_sample.py  simple_mlperceptron.py  simple_perception2.py  simple_perception3.py  simple_perceptron.py  simpleqiita.py  spam.py
data/: clf_lr.pickle  data1a.pickle  data2a.pickle  data3a.pickle  data_a.pickle
