[metadata]
name = cl
version = 0.0.1
description = classication work
license = MIT License
author = aki
author_email = @gmail.com
classifiers =
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
  matplotlib
  pandas

[options.extras_require]
dev =
  pytest
  flake8
  mypy

[options.entry_points]
console_scripts =
  cltemp = cl.main:core

